Add comments on contribute

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 <header id="title-block-header">
 <h1 class="title">E-world</h1>
 </header>
+<p><em>This is ongoing collection of literature about e-value
+(methodology),</em> <em>Pls make a pull request in <a
+href="https://github.com/wyq977/e-world">github</a>.</em></p>
 <h2 id="section">2025</h2>
 <ul>
 <li><span class="citation"
@@ -38,8 +41,8 @@ data-cites="ramdasHypothesisTestingEvalues2025"><div
 class="csl-block"><strong>Hypothesis testing with <span
 class="nocase">E-values</span></strong>. Aaditya Ramdas and Ruodu
 Wang.</div><div class="csl-block"><em>Foundations and Trends in
-Statistics</em>, 1 (1-2), pp. 1–390, 2025</div></span> <em>E-book</em>
-Some comments about it! <a
+Statistics</em>, 1 (1-2), pp. 1–390, 2025</div></span> A comprehensive
+E-book. <a
 href="https://www.stat.cmu.edu/~aramdas/ebook-final.pdf">PDF</a></li>
 </ul>
 <h2 id="section-1">2024</h2>
@@ -60,8 +63,8 @@ data-cites="wassermanUniversalInference2020"><div
 class="csl-block"><strong>Universal inference</strong>. Larry Wasserman,
 Aaditya Ramdas and Sivaraman Balakrishnan.</div><div
 class="csl-block"><em>Proceedings of the National Academy of
-Sciences</em>, 117 (29), pp. 16880–16890, 2020</div></span> <em>A
-universally applicable e-value and e-process</em></li>
+Sciences</em>, 117 (29), pp. 16880–16890, 2020</div></span> A
+universally applicable e-value and e-process</li>
 </ul>
 <h2 id="preprints">Preprints</h2>
 <ul>
